# Effects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Core/Resources/: default.frag  default.vert
Core/src/: EffectsEngine.cpp  EffectsEngine.h  main.cpp
Core/src/Engine/: EffectsEngine.cpp  EffectsEngine.h  InterfacesFactory.cpp  InterfacesFactory.h
Core/src/Modules/: IModule.h  ModulesCommon.h  ModulesManager.cpp  ModulesManager.h
Core/src/Modules/Camera/: Camera.cpp  Camera.h  CameraModule.cpp  CameraModule.h  OrthogonalCamera.cpp  OrthogonalCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Core/src/Modules/Render/: RenderModule.cpp  RenderModule.h  RenderOptions.cpp  RenderOptions.h
Core/src/Modules/Render/Mesh/: IModelLoader.h  Mesh.cpp  Mesh.h  MeshCommon.h  Model.cpp  Model.h  ModelLoaderAssimp.cpp  ModelLoaderAssimp.h
Core/src/Modules/Render/Particles/: Particle.h  ParticleManager.cpp  ParticleManager.h  ParticleSystem.cpp  ParticleSystem.h
Core/src/Modules/Render/Shader/: Shader.cpp  Shader.h  ShaderCommon.h  ShaderProgram.cpp  ShaderProgram.h
Core/src/Modules/Render/Texture/: Texture.cpp  Texture.h  TextureCommon.h  TexturesManager.cpp  TexturesManager.h
Core/src/Modules/Window/: WindowCallbacksManager.cpp  WindowCallbacksManager.h  WindowModule.cpp  WindowModule.h
Core/src/Utils/: Dirs.h.in  ServiceLocator.h  Singleton.h
Core/src/Utils/Image/: IImageImplementation.h  Image.cpp  Image.h  ImageImplementationSTBImage.cpp  ImageImplementationSTBImage.h
